--- a/demodashboard/package.json
+++ b/demodashboard/package.json
@@ -29,6 +29,7 @@
     "@react-aria/datepicker": "^3.11.2",
     "@react-stately/datepicker": "^3.10.2",
     "@remixicon/react": "^4.2.0",
+    "axios": "^1.7.7",
     "cx": "^24.9.3",
     "date-fns": "^3.6.0",
     "geist": "^1.3.1",
