--- a/demodashboard/package.json
+++ b/demodashboard/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@internationalized/date": "^3.5.5",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@internationalized/date": "^3.5.6",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -17,7 +19,7 @@
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
-    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slider": "^1.2.0",
@@ -26,17 +28,20 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@react-aria/datepicker": "^3.11.2",
-    "@react-stately/datepicker": "^3.10.2",
+    "@react-aria/datepicker": "^3.11.3",
+    "@react-stately/datepicker": "^3.10.3",
     "@remixicon/react": "^4.2.0",
     "axios": "^1.7.7",
     "cx": "^24.9.3",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
+    "framer-motion": "^11.9.0",
     "geist": "^1.3.1",
     "next": "14.2.13",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-tailwindcss-datepicker": "^1.7.2",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2",
     "tailwind-variants": "^0.2.1"
